
Changelog
=========

1.0.24 (unreleased)
-------------------

- Limits the width of the day view, to improve the accessibility of the menu.
  Fixes #157.
  [href]

- Adds a fast way to switch to another view from the allocation menu. Fixes #153.
  [href]

- Exceptions occurring in forms now include the correct stacktrace.
  [href]

- Export filenames now include the year and the month. Fixes #155.
  [href]

- Adds shading (avilability indicator) to the calendar legend. Fixes #154.
  [href]

1.0.23 (2014-06-23)
-------------------

- Adds unicode check/cross marks for approve/deny/revoke, to increase legibility.
  [href]

- Adds thank-you page shown after submitting a reservation. Each resource
  may have a custom text which is shown under the thank you note. Closes #138.
  [href]

- Refetch less agressively to make the interface 'calmer'. Only actions by
  the user which change something trigger a refresh now. Clicking on the
  cancel button of an overlay for example won't reload the events anymore.
  [href]

- The date is now correctly localized in all the views as well as the calendar.
  Fixes #142.
  [href]

- Renames "Reservation Quota" (eng) to "Number of Reservations". Fixes #143.
  [href]

- Availability partitions are now more visible. Fixes #149.
  [href]

- Allocations which are not completely displayed on the calendar now show
  correct availability partitions. Fixes #145.
  [href]

- Correctly handles partly-available whole-day allocations. Fixes #129.
  [href]

- No longer raise an exception to the user if a nonexistant reservation is
  removed from 'your reservations'. Fixes #123.
  [href]

1.0.22 (2014-06-05)
-------------------

- Adds new reservation-assistant role which may view but not edit submitted
  reservation data.
  [href]

- Fixes overlay js failing if loaded after jquery tools.
  [href]

- Slims down the session handling code.
  [href]

1.0.21 (2014-03-26)
-------------------
