@@ -231,9 +231,9 @@ body .event-unavailable .fc-event-time {
 
 /* calendar legend */
 .legend {
-    padding: 3px 3px 5px 3px !important;
+    padding: 5px 0 5px 0 !important;
     background-color: #eee;
-    width: 59%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -337,7 +337,7 @@ body .event-unavailable .fc-event-time {
 
 /* make the daily view calendar smaller than the rest */
 .seantis-reservation-view .fc-view-agendaDay {
-    width: 60%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
 }
